--- a/style.css
+++ b/style.css
@@ -80,11 +80,16 @@
     top: 20%;
 }
 .leftPic{
- padding-top: 280px;
+ /* padding-top: 280px;
  padding-left:25%;
  padding-right: 110px;
- padding-bottom: 40px;
+ padding-bottom: 40px; */
 /* margin-top: 150px; */
+    padding-left:80px;
+    height: 85%;
+    width: 100%;
+    padding-top: 50%;
+    padding-right: 25%;
 }
 .containerOneBottomMiddle{
     height: 100%;
@@ -105,9 +110,9 @@
 }
 .containerOneBottomMiddle img{
  position: absolute;
- height:550px;
- width:550px;
- top: 300px;
+    height: 350px;
+    width: 350px;
+    top: 276px;
 }
 .containerOneBottomRight{
     height: 100%;
@@ -166,23 +171,26 @@ padding-right: 25%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .containerTwoHead2{
-    position: absolute;
-    font-size: 30px;
-    top: 80px;
-    left: 50px;
+    /* position: absolute; */
+    font-size: 28px;
+    margin-top: 70px;
+    margin-left: 50px;
     color: #5A5A5A;
 }
 .containerTwoHead3{
     position: absolute;
     font-size: 24px;
-    top: 300px;
+    top: 200px;
     left: 50px; 
     /* color: #5A5A5A; */
+}
+.dr{
+  top:200px;
 }
 .containerTwoButton{
     position: absolute;
     left: 50px;
-    bottom: 80px;
+    bottom: 150px;
     height: 50px;
     width: 170px;
     background-color: #5A5A5A;
@@ -208,12 +216,13 @@ padding-right: 25%;
     font-style: italic;
     position: absolute;
     left: 50px;
+    top:-100px;
 }
 .containerThreeHead2{
     font-size: 30px;
     color:#5A5A5A;
     position: absolute;
-    top: 100px;
+    top: 0px;
     font-weight: 300;
     left: 50px;
 }
@@ -226,22 +235,22 @@ padding-right: 25%;
     bottom: 70px;
 }
 .containerThreeImg1{
-    height: 500px;
-    width: 700px;
+    height: 400px;
+    width: 600px;
     position: absolute;
     bottom: 140px;
     left: 70px;
 }
 .containerThreeList{
      position: absolute;
-     left: 900px;
-     top: 320px;
+     left: 800px;
+     top: 50px;
      font-size: 20px;
 }
 .containerThreeButton{
       position: absolute;
-      left: 900px;
-      top: 700px;
+      left: 800px;
+      top: 400px;
       height: 40px;
       width: 150px;
       background-color: #454545;
@@ -279,54 +288,54 @@ padding-right: 25%;
 }
 
 .img1{
-    height: 600px;
-    width: 800px;
+    height: 400px;
+    width: 500px;
     position: absolute;
     right: 80px;
-    bottom: 80px;
+    bottom: 50px;
 }
 .img2{
     position: absolute;
-    top: 300px;
-    height: 90px;
-    width: 80px;
+    top: 200px;
+    height: 50px;
+    width: 60px;
     left: 50px;
 }
 .img2H{
     position: absolute;
     left: 180px;
-    top: 300px;
+    top: 200px;
     font-size: 25px;
     
 }
 .img2P{
     position: absolute;
     left: 180px;
-    top: 345px;
+    top: 255px;
     font-size: 20px;
 }
 .img3{
     position: absolute;
-    top: 475px;
-    height: 90px;
-    width: 80px;
+    top: 355px;
+    height: 70px;
+    width: 60px;
     left: 50px;
 }
 .img3H{
     position: absolute;
     left: 180px;
-    top: 475px;
+    top: 355px;
     font-size: 25px;
 }
 .img3P{
     position: absolute;
     left: 180px;
-    top: 525px;
+    top: 425px;
     font-size: 20px;
 }
 .img4{
     position: absolute;
-    top: 650px;
+    top: 500px;
     height: 90px;
     width: 80px;
     left: 50px;
@@ -334,13 +343,13 @@ padding-right: 25%;
 .img4H{
     position: absolute;
     left: 180px;
-    top: 650px;
+    top: 500px;
     font-size: 25px;
 }
 .img4P{
     position: absolute;
     left: 180px;
-    top: 690px;
+    top: 550px;
     font-size: 20px;
 }
 .containerFive{
